2009-03-16  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm: Post current package and # remaining in xterm escapes

2009-03-07  Dave Morrison  <drm@finkproject.org>

	* all: updated Copyright notice

2009-03-06  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: Allow another version of perl.

2009-02-19  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Fix some bogus perl provides, also change xcode
	to not be BuildDependsOnly, since some packages legitimately depend
	upon it at runtime.

2008-12-24  Sebastien Maret  <bmaret@users.sourceforge.net>

	* Engine.pm, PkgVersion.pm: Set proxy env vars before calling
	apt-get. Fixes bug #2040507

2008-12-19  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Warn for older (not MD5-protected) patch syntaxes

2008-12-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Also store patchfile in .deb

2008-12-12  Alexander Hansen  <akh@finkproject.org>

	* Bootstrap.pm:  Recognize 10.5.6

2008-11-30  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Remove weird whitespace in diagnostic msg.

2008-11-17  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Fix "hardcoded /sw in .patch" check: %exp map
	isn't a .info field

2008-11-13  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Include list of modern dependencies in 'fink info'
	for obsolete packages

2008-10-28  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: add function get_selfupdatetrees()

2008-10-27  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm, Services.pm: modernize bootstrap

2008-10-21  Dave Morrison  <drm@finkproject.org>

	* VirtPackage.pm: correct an error in what system perl 5.8.8 "provides"

2008-10-05  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: _filename_versioning_cmp() API change: always
	returns a defined number

2008-10-05  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: factor out _filename_versioning_cmp() function
